--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uday Web</title>
-</head>
-<body>
-    Enter your name <input id = "names" type="text"> <br>
-    Email <input id = "mail" type="email"> <br>
-    Password <input id = "password" type="password"> <br>
-    Confirm Password <input id = "cpassword" type="password"> <br>
-    Submit <input id = "input" type="submit">
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="form-container">
+      <h1>Form</h1>
+      <label for="names"> Enter your name</label>
+      <input id="names" type="text" /> <br />
+      <label for="mail">Email</label>
+      <input id="mail" type="email" /> <br />
+      <label for="password">Password</label>
+      <input id="password" type="password" /> <br />
+      <label for="cpassword">Confirm Password</label>
+      <input id="cpassword" type="password" /> <br />
+      <button id="input">Submit</button>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
